Fix alignment on highscore table

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -279,6 +279,7 @@ h1{
 
 .end_highscore h1{
     text-shadow: none;
+    font-size: 2.5em;
 }
 .end_highscore h1 span{
     text-shadow: 5px 5px white;
@@ -287,7 +288,7 @@ h1{
     font-family: 'Neucha', cursive;
     font-size: 1.5em;
     padding: 5px 10px;
-    width: 210px;
+    width: 130px;
     margin-right: 5px;
     border: 2px solid rgb(0,0,0);
 }
@@ -338,6 +339,7 @@ body.display_highscore .end_highscore{
     margin: 10px auto 0;
     height: 400px;
     overflow-y: scroll;
+    height: 320px;
 }
 .score_table_tbl{
     width: 100%;
